--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
 
-        <b>Notes</b>
+        <b style="font-size:200%;">Notes</b>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
@@ -16,24 +16,27 @@
 
     <body>
         <div class="row">
-            
+            <div class="col-md-3" style="text-align: right; font-size: 200%; color: gainsboro;">
+                Note name:
+            </div>
+            <div class="col-md-9">
+                <textarea id="noteName" style="font-size: 150%; height: 50px;"></textarea>
+            </div>
         </div>
         <div class="row">
-            <div class="col-md-1"></div>
             <div class="col-md-3">
-                <table id="table1">
+                <button onclick="addRow()" id="button1">
+                    <h1>Create new note</h1>
+                    <p></p>
+                </button>
+                <table id="table1" style="width: 100%;">
                     <tr> <td>
-                        <button onclick="addRow()" id="button1">
-                            <h1>Add note</h1>
-                            <p>dd</p>
-                        </button> </td>
+                         </td>
                     </tr>
                 </table>
             </div>
-            <div class="col-md-6">
-                <textarea id="textarea1">
-                
-                </textarea>
+            <div class="col-md-9">
+                <textarea id="textarea1"></textarea>
             </div>
         </div>
         <script type="text/javascript" src="app.js"></script>
