Added select function

--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
                 Note name:
             </div>
             <div class="col-md-9">
-                <textarea id="noteName"></textarea>
+                <textarea id="noteName" style="font-size: 150%; height: 50px;"></textarea>
             </div>
         </div>
         <div class="row">
             <div class="col-md-3">
                 <button onclick="addRow()" id="button1">
-                    <h1>Create new note</h1>
-                    <p></p>
+                    Create new note
                 </button>
                 <table id="table1" style="width: 100%;">
                     <tr> <td>
