--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <div class="row">
             <div class="col-md-3">
                 <button onclick="addRow()" id="button1">
-                    <h1>Create new note</h1>
-                    <p></p>
+                    Create new note
                 </button>
                 <table id="table1" style="width: 100%;">
                     <tr> <td>
