Added new design and time of creation

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 Note name:
             </div>
             <div class="col-md-9">
-                <textarea id="noteName" style="font-size: 150%; height: 50px;"></textarea>
+                <textarea id="noteName" style="font-size: 150%; height: 50px;" ></textarea>
             </div>
         </div>
         <div class="row">
@@ -29,10 +29,12 @@
                 <button id="button1">
                     Create new note
                 </button>
-                <div id="notes" style="background-color: gray;"> </div>
+                <div class="row" id="notes"> 
+                
+                </div>
             </div>
             <div class="col-md-9">
-                <textarea id="textarea1"></textarea>
+                <textarea id="textarea1" ></textarea>
             </div>
         </div>
         <script type="text/javascript" src="app.js"></script>
