--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
+        
         <link rel="stylesheet"
         href="styles.css">
 
@@ -20,22 +21,20 @@
                 Note name:
             </div>
             <div class="col-md-9">
-                <textarea id="noteName" style="font-size: 150%; height: 50px;"></textarea>
+                <textarea id="noteName" style="font-size: 150%; height: 50px;" ></textarea>
             </div>
         </div>
         <div class="row">
             <div class="col-md-3">
-                <button onclick="addRow()" id="button1">
+                <button id="button1">
                     Create new note
                 </button>
-                <table id="table1" style="width: 100%;">
-                    <tr> <td>
-                         </td>
-                    </tr>
-                </table>
+                <div class="row" id="notes"> 
+                
+                </div>
             </div>
             <div class="col-md-9">
-                <textarea id="textarea1"></textarea>
+                <textarea id="textarea1" ></textarea>
             </div>
         </div>
         <script type="text/javascript" src="app.js"></script>
