Now text and title can be changed

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>MyNotes</title>
         <a href="/" id="HomePage">
             <b style="font-size:200%;" >Notes</b>
         </a>
@@ -16,7 +17,7 @@
             <div class="col-md-3" style="text-align: right; font-size: 200%; color: gainsboro;">
                 Note name:
             </div>
-            <div class="col-md-9">
+            <div class="col-md-8">
                 <textarea id="noteName" style="font-size: 150%; height: 50px;" ></textarea>
             </div>
         </div>
@@ -29,7 +30,7 @@
                 
                 </div>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-8">
                 <textarea id="textarea1" ></textarea>
             </div>
         </div>
