new style for selected buttons

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>MyNotes</title>
-        <a href="/" id="HomePage">
+        <a href="/OKR_Lab2/" id="HomePage"> <!--OKR_Lab2/-->
             <b style="font-size:200%;" >Notes</b>
         </a>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
