--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
     <body>
         <div class="row">
-            <div class="col-md-3" style="text-align: right; font-size: 200%; color: gainsboro;">
+            <div class="col-3" style="text-align: right; font-size: 200%; color: gainsboro;">
                 Note name:
             </div>
-            <div class="col-md-8">
+            <div class="col-8">
                 <textarea id="noteName" style="font-size: 150%; height: 50px;" ></textarea>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-3">
                 <button id="button1">
                     Create new note
                 </button>
@@ -30,7 +30,7 @@
                 
                 </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-8">
                 <textarea id="textarea1" ></textarea>
             </div>
         </div>
