--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <body>
         <div class="row">
-            <div class="col-3" style="text-align: right; font-size: 200%; color: gainsboro;">
+            <div class="col-3" id="lableName">
                 Note name:
             </div>
             <div class="col-8">
-                <textarea id="noteName" style="font-size: 150%; height: 50px;" ></textarea>
+                <textarea id="noteName"></textarea>
             </div>
         </div>
         <div class="row">
@@ -26,12 +26,12 @@
                 <button id="button1">
                     Create new note
                 </button>
-                <div class="row" id="notes"> 
+                <div class="row" id="notes">
                 
                 </div>
             </div>
             <div class="col-8">
-                <textarea id="textarea1" ></textarea>
+                <textarea id="noteContent" ></textarea>
             </div>
         </div>
         <script type="text/javascript" src="app.js"></script>
